feat: secure authentication — JWT cookies, PIN login, CSRF protection
SQL migration:
- Added pin_hash VARCHAR(60) and force_pin_change BOOLEAN to users table

Backend:
- pom.xml: upgraded Spring Boot to 4.0.5, added spring-boot-starter-security,
  jjwt-api/impl/jackson (0.12.5), bucket4j-core (8.10.1)
- User.java: pinHash and forcePinChange fields added
- JwtService.java: generates and validates HS256 JWTs. Access token 30min,
  refresh token 8h. Secret read from app.jwt.secret / JWT_SECRET env var.
  App refuses to start if secret is missing or shorter than 32 characters.
- JwtFilter.java: OncePerRequestFilter reads access_token httpOnly cookie,
  validates JWT, populates Spring Security context with userId as principal.
  Returns TOKEN_EXPIRED or TOKEN_INVALID codes on 401 for frontend handling.
- SecurityConfig.java: stateless session, CSRF via readable XSRF-TOKEN cookie,
  security headers (HSTS, CSP, X-Frame-Options, X-Content-Type-Options),
  JSON 401/403 responses, Spring login page disabled.
- CorsConfig.java: X-User-Id replaced with X-XSRF-Token in allowed headers.
- AuthRequestDTO / AuthResponseDTO: new DTOs for login endpoint.
- AuthController.java: POST /auth/login (rate-limited 5/min per IP via Bucket4j),
  POST /auth/refresh, POST /auth/logout, POST /auth/change-pin. Tokens issued
  as httpOnly SameSite=Strict cookies via ResponseCookie.
- DataSeeder.java: seeds pin_hash from user's first name (lowercased) on
  startup for any user missing a PIN. Idempotent. Remove when Microsoft Auth
  replaces PIN login.
- UserService.java: resetPin() generates cryptographically random 6-digit PIN
  via SecureRandom, BCrypts it, sets force_pin_change = true, returns plain
  text once. Private toDTO() removed — was duplicating UserMapper.
- UserController.java: PUT /users/{id}/reset-pin added.
- GlobalExceptionHandler.java: ExpiredJwtException → 401 TOKEN_EXPIRED,
  JwtException → 401 TOKEN_INVALID. buildResponse accepts optional code field.
- DisputeController, Resul